--- a/portfolio/src/app/pages/about/about.component.html
+++ b/portfolio/src/app/pages/about/about.component.html
@@ -13,18 +13,19 @@
         <h3>Creative developer and life-long learner</h3>
 
         <p>
-          I have always loved tech and making things. When I was younger it came
-          in the form of video games like minecraft or some city builder or even
-          Legos. Building in a digital space came naturally. A few years into a
-          sales career and some un-forseen global events, (*cough) I started to
-          play around with computer programming. I was instantly hooked. I
+          I have always loved tech and building things. When I was younger it
+          came in the form of building Legos, then video games like minecraft or
+          some city builder. Building in a digital space came naturally. In my
+          sales career I was always building trackers and creating my own
+          algorithms to boost productivity. In order to do this I started to
+          play around with computer programming. I was instantly captivated. I
           started classes right away and haven't really looked back since.
         </p>
         <p>
           Since then I have been focused on completing my degree and
-          contributing as a developer. My current position has taught me a lot
-          in the front end and I am currently sharpening my skills to work as a
-          full stack dev.
+          contributing as a developer. My current position has allowed me to
+          learn the front end and I am currently sharpening my skills to work as
+          a full stack dev.
         </p>
         <h4>As a developer</h4>
         <p>
@@ -50,15 +51,13 @@
         </p>
         <h4>As a person</h4>
         <p>
-          Work life balance is very important to me. One of the things that
-          gravitated me to this career was just that. When doing sales I often
-          found myself burned out and performing sub-optimally in my work and
-          life.
+          Work life balance is very important to me. I gravitated to this career
+          because of just that.
         </p>
         <p>
-          I make sure to take time for my family and myself. It puts me in a
-          great place mentally and because of that I am able to produce and
-          out-perform expectations.
+          I make sure to take time for my family and myself. I love spending
+          time with my kids, whether we are hiking, playing games or cozied up
+          to a movie.
         </p>
       </mat-card-content>
     </mat-card>
