--- a/portfolio/src/app/pages/projects/projects.component.html
+++ b/portfolio/src/app/pages/projects/projects.component.html
@@ -109,17 +109,16 @@
         <p>
           This website has been one of my favorite projects to work on. The
           first iteration was created almost two years ago. It consisted of
-          vanilla everything. No knock on vanilla either. It wasn't fantastic
-          but it was my first crack at anything in the front end. It was a lot
-          of fun.
+          vanilla everything. It wasn't fantastic but it was my first crack at
+          anything in the front end. It was a lot of fun.
         </p>
         <p>
           Over time as my skills have improved, so too has this site. I have
           refactored the site to look and perform better, and all around has
-          been great experience for me. Now that I have gotten very comfortable
-          in the front-end I am currently working on implementing a full backend
-          as well. I plan on including some admin settings and tying in a
-          database.
+          been a great experience for me. Now that I have gotten very
+          comfortable in the front-end I am currently working on implementing a
+          full backend as well. I plan on including some admin settings and
+          tying in a database.
         </p>
         <p>Skills used here:</p>
         <mat-chip-listbox aria-label="Skills">
