fixed responsive issues

--- a/portfolio/src/app/pages/landing/landing.component.html
+++ b/portfolio/src/app/pages/landing/landing.component.html
@@ -1,7 +1,8 @@
 <div class="title-container bg">
   <h1 class="name">
-    Hi! I'm Jason | Software Engineer |
-    <span class="container-flip">
+    <div>Hi! I'm Jason,</div>
+    <div>Software Engineer,</div>
+    <div class="container-flip">
       <span class="flip">Husband & Father</span>
       <span class="flip">Student</span>
       <span class="flip">Lego Builder</span>
@@ -10,6 +11,6 @@
       <span class="flip">Tinkerer</span>
       <span class="flip">Tech Enthusiast</span>
       <span class="flip">Dodgers Fan</span>
-    </span>
+    </div>
   </h1>
 </div>
