--- a/portfolio/src/app/pages/landing/landing.component.scss
+++ b/portfolio/src/app/pages/landing/landing.component.scss
@@ -183,3 +183,18 @@
     height: 30px;
   }
 }
+
+@media (max-width: 350px) {
+  .title-container {
+    display: flex;
+    flex-direction: column;
+    font-size: 12pt;
+    overflow-x: hidden;
+    .name {
+      margin-left: 5vw;
+    }
+  }
+  .container-flip {
+    height: 30px;
+  }
+}
