--- a/portfolio/src/app/pages/projects/projects.component.scss
+++ b/portfolio/src/app/pages/projects/projects.component.scss
@@ -4,6 +4,12 @@ img.project-image {
   object-fit: contain;
 }
 
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .card-overlay {
   position: relative;
   display: inline-block;
