Image style fix

--- a/portfolio/src/app/pages/projects/projects.component.scss
+++ b/portfolio/src/app/pages/projects/projects.component.scss
@@ -7,7 +7,7 @@ img.project-image {
 .image-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  // align-items: center;
 }
 
 .card-overlay {
