Updates to resume page

--- a/portfolio/src/app/pages/resume/resume.component.html
+++ b/portfolio/src/app/pages/resume/resume.component.html
@@ -1,13 +1,13 @@
 <div>
   <object
-    data="../../../assets/files/JasonEdmanResume.pdf"
+    data="../../../assets/files/jpeResume.pdf"
     type="application/pdf"
     width="100%"
     height="850px"
   >
     <p>
       Unable to display PDF file.
-      <a href="../../../assets/files/JasonEdmanResume.pdf">Download</a> instead.
+      <a href="../../../assets/files/jpeResume.pdf">Download</a> instead.
     </p>
   </object>
 </div>
