--- a/portfolio/src/app/pages/about/about.component.html
+++ b/portfolio/src/app/pages/about/about.component.html
@@ -4,7 +4,7 @@
     <mat-card class="image-container">
       <img
         mat-card-image
-        src="../../../assets/images/family.jpg"
+        src="../../../assets/images/family.webp"
         alt="family"
       />
     </mat-card>
