--- a/portfolio/src/app/pages/projects/projects.component.html
+++ b/portfolio/src/app/pages/projects/projects.component.html
@@ -31,7 +31,7 @@
           many technologies.
         </p>
         <p>Skills used here:</p>
-        <mat-chip-listbox aria-label="Skills">
+        <mat-chip-listbox aria-label="Project 1 skills">
           <mat-chip>Angular</mat-chip>
           <mat-chip>Typescript</mat-chip>
           <mat-chip>Java</mat-chip>
@@ -112,7 +112,7 @@
           tying in a database.
         </p>
         <p>Skills used here:</p>
-        <mat-chip-listbox aria-label="Skills">
+        <mat-chip-listbox aria-label="Project 2 skills">
           <mat-chip>Angular</mat-chip>
           <mat-chip>Typescript</mat-chip>
           <mat-chip>SCSS</mat-chip>
@@ -172,7 +172,7 @@
           not to repeat my code when possible.
         </p>
         <p>Skills used here:</p>
-        <mat-chip-listbox aria-label="Skills">
+        <mat-chip-listbox aria-label="Project 3 skills">
           <mat-chip>Angular</mat-chip>
           <mat-chip>Typescript</mat-chip>
           <mat-chip>SCSS</mat-chip>
@@ -252,7 +252,7 @@
           take advantage of what can be done with open-source projects.
         </p>
         <p>Skills used here:</p>
-        <mat-chip-listbox aria-label="Skills">
+        <mat-chip-listbox aria-label="Project 4 skills">
           <mat-chip>React</mat-chip>
           <mat-chip>TSX</mat-chip>
           <mat-chip>SCSS</mat-chip>
