--- a/portfolio/src/app/pages/contact/contact.component.html
+++ b/portfolio/src/app/pages/contact/contact.component.html
@@ -47,16 +47,24 @@
   </form>
   <p>Or reach me on one of these platforms</p>
   <div class="btn-container">
-    <a href="https://www.linkedin.com/in/jason-edman-140724241/" target="_blank"
+    <a
+      href="https://www.linkedin.com/in/jason-edman-140724241/"
+      target="_blank"
+      aria-label="Check out my linkedin"
       ><i class="fa-brands fa-linkedin fa-2xl" style="color: #0077b5"></i
     ></a>
-    <a href="https://github.com/jpe0824"
+    <a
+      href="https://github.com/jpe0824"
+      target="_blank"
+      aria-label="Check out my github"
       ><i class="fa-brands fa-github fa-2xl" style="color: #010432"></i
     ></a>
-    <a href="mailto:jason.e24@gmail.com">
+    <a href="mailto:jason.e24@gmail.com" aria-label="Send me an email">
       <i class="fa-regular fa-envelope fa-2xl" style="color: #ff4242"></i
     ></a>
-    <a href="https://discordapp.com/users/691278886666895382"
+    <a
+      href="https://discordapp.com/users/691278886666895382"
+      aria-label="Find me on discord"
       ><i class="fa-brands fa-discord fa-2xl" style="color: #5865f2"></i
     ></a>
   </div>
